<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a2101240.myapplication.com.example.a2101240.CalculadoraRPN.MainActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="117dp">



        <Button
            android:text="@string/n0"
            android:tag="@string/n0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button0"
            android:layout_row="0"
            android:onClick="numberText"
            android:layout_column="0" />

        <Button
            android:text="@string/Pun"
            android:tag="@string/Pun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonPun"
            android:layout_row="0"
            android:layout_column="1" />


        <Button
            android:text="@string/Mas"
            android:tag="@string/Mas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMas"
            android:layout_row="0"
            android:onClick="numberText"
            android:layout_column="2" />

        <Button
            android:text="="
            android:tag="="
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="calcular"
            android:id="@+id/button" />


    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="74dp">


        <Button
            android:text="@string/n8"
            android:tag="@string/n8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button8"
            android:layout_row="0"
            android:onClick="numberText"
            android:layout_column="1" />

        <Button
            android:text="@string/n4"
            android:tag="@string/n4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_row="1"
            android:onClick="numberText"
            android:layout_column="0" />

        <Button
            android:text="@string/n5"
            android:tag="@string/n5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:layout_row="1"
            android:onClick="numberText"
            android:layout_column="1" />

        <Button
            android:text="@string/Div"
            android:tag="@string/Div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDiv"
            android:layout_row="0"
            android:onClick="numberText"
            android:layout_column="3" />

        <Button
            android:text="@string/n9"
            android:tag="@string/n9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:layout_row="0"
            android:onClick="numberText"
            android:layout_column="2" />

        <Button
            android:text="@string/n6"
            android:tag="@string/n6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:layout_row="1"
            android:onClick="numberText"
            android:layout_column="2" />

        <Button
            android:text="@string/n7"
            android:tag="@string/n7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:layout_row="0"
            android:onClick="numberText"
            android:layout_column="0" />

        <Button
            android:text="@string/n2"
            android:tag="@string/n2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_row="2"
            android:onClick="numberText"
            android:layout_column="1"
            android:layout_below="@+id/gridLayout"
            android:layout_toRightOf="@+id/button1"
            android:layout_toEndOf="@+id/button1" />

        <Button
            android:text="@string/n3"
            android:tag="@string/n3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_row="2"
            android:onClick="numberText"
            android:layout_column="2"
            android:layout_below="@+id/gridLayout"
            android:layout_toRightOf="@+id/button2"
            android:layout_toEndOf="@+id/button2" />

        <Button
            android:text="@string/Res"
            android:tag="@string/Res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRes"
            android:layout_row="2"
            android:onClick="numberText"
            android:layout_column="3"
            android:layout_alignBaseline="@+id/button3"
            android:layout_alignBottom="@+id/button3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:text="@string/Mul"
            android:tag="@string/Mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonMul"
            android:layout_row="1"
            android:onClick="numberText"
            android:layout_column="3" />

        <Button
            android:text="@string/n1"
            android:tag="@string/n1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            android:layout_row="2"
            android:onClick="numberText"
            android:layout_column="0"
            android:layout_below="@+id/gridLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </GridLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:text="@string/number"
        android:textAlignment="textEnd"
        android:id="@+id/number"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="AC"
        android:tag="AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="numberText"
        android:id="@+id/AC" />

    <Button
        android:text="+ / -"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_toRightOf="@+id/AC"
        android:layout_toEndOf="@+id/AC"
        android:onClick="numberText"
        android:id="@+id/plusormin" />

    <Button
        android:text="SIN"
        android:tag="sen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_toRightOf="@+id/plusormin"
        android:layout_toEndOf="@+id/plusormin"
        android:onClick="numberText"
        android:id="@+id/SIN" />

    <Button
        android:text="COS"
        android:tag="Cos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_toRightOf="@+id/SIN"
        android:layout_toEndOf="@+id/SIN"
        android:onClick="numberText"
        android:id="@+id/COS" />

    <Button
        android:text="TAN"
        android:tag="tan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AC"
        android:layout_toLeftOf="@+id/plusormin"
        android:layout_toStartOf="@+id/plusormin"
        android:onClick="numberText"
        android:id="@+id/TAN" />

    <Button
        android:text="%"
        android:tag="%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/COS"
        android:layout_toRightOf="@+id/SQRT"
        android:layout_toEndOf="@+id/SQRT"
        android:id="@+id/por"
        android:onClick="numberText"
        />

    <Button
        android:text="SQRT"
        android:tag="sqrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SQRT"
        android:onClick="numberText"
        android:layout_alignBaseline="@+id/por"
        android:layout_alignBottom="@+id/por"
        android:layout_toRightOf="@+id/plusormin"
        android:layout_toEndOf="@+id/plusormin" />

    <Button
        android:text="x²"
        android:tag="^"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ele"
        android:onClick="numberText"
        android:layout_alignBaseline="@+id/SQRT"
        android:layout_alignBottom="@+id/SQRT"
        android:layout_toRightOf="@+id/TAN"
        android:layout_toEndOf="@+id/TAN" />


</RelativeLayout>
